# drugclip

./: .gitignore  README.md  embedding_demo.py  example.py  main.py  pyproject.toml  query_demo.py
drugclip/: __init__.py  benchmark_dude.py  configuration_drugclip.py  load_preencoded.py  load_qdrant.py  modeling_drugclip.py  query_qdrant.py
drugclip/scripts/: benchmark_dude.py  load_qdrant.py
unimol/: __init__.py  configuration_unimol.py  modeling_unimol.py
