[project]
name = "drugclip"
version = "0.1.0"
description = "Pure PyTorch and/or Huggingface transformers implementation of DrugCLIP (and Uni-Mol)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "rdkit>=2025.9.3",
    "scipy>=1.14.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[tool.setuptools.packages.find]
include = ["drugclip*", "unimol*"]
