[project]
name = "drugclip"
version = "0.1.0"
description = "Pure PyTorch and/or Huggingface transformers implementation of DrugCLIP (and Uni-Mol)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmdb>=1.7.5",
    "numpy>=2.4.1",
    "rdkit>=2025.9.3",
    "scipy>=1.14.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[project.optional-dependencies]
qdrant = [
    "qdrant-client>=1.9.0",
    "tqdm>=4.66.0",
]

[project.scripts]
load-qdrant = "drugclip.scripts.load_qdrant:main"
load-preencoded = "drugclip.scripts.load_preencoded:main"
query-qdrant = "drugclip.scripts.query_qdrant:main"
benchmark-dude = "drugclip.scripts.benchmark_dude:main"

[tool.setuptools.packages.find]
include = ["drugclip*", "unimol*"]
